--- a/experiencia.html
+++ b/experiencia.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <nav class="cabecalho__menu"> 
+        <section class="cabecalho__menu"> 
             <a href="index.html" class="cabecalho__menu__link"><img class="cabecalho__logo" src="./assets/Logo1 1.png" alt="Logo do CodeChella"></a>   
             <ul class="menu__lista">
                 <a href="experiencia.html" class="cabecalho__menu__link">A experiência</a>
@@ -18,7 +18,7 @@
                 <a href="informacoes.html" class="cabecalho__menu__link">Informações</a>
                 <a href="ingresso.html" class="cabecalho__menu__link">Ingresso</a>
             </ul>
-        </nav>
+        </section>
     </header>
     <main class="apresentacao">
         <div class="apresentacao__secao">
@@ -49,19 +49,17 @@
     </main>
     <footer class="rodape">
         <nav class="rodape__menu">
-            <ul class="rodape__conteudo">    
-                <a href="index.html" class="rodape__link"><img class="rodape__logo" src="./assets/Logo1 1.png" alt="Logo do CodeChella"></a>
-                <div class="rodape__mensagem">
-                    <h2 class="rodape__mensagem__texto">Desenvolvido por Alex Gomes.</h2>
-                    <h2 class="rodape__mensagem__texto">Projeto fictício sem fins lucrativos.</h2>
-                </div>
-            </ul>       
+            <a href="index.html" class="rodape__link"><img class="rodape__logo" src="./assets/Logo1 1.png" alt="Logo do CodeChella"></a>
             <div class="rodape__lista">
-                <h2 class="rodape__redes">Acesse nossas redes: </h2>
+                <p class="rodape__redes">Acesse nossas redes: </p>
                 <a href="https://www.twitch.tv/alexxgoomes" class="rodape__link"><img src="./assets/icone-twitch.png" alt="icone-twitch"></a>
                 <a href="https://www.instagram.com/alexxgoomes/" class="rodape__link"><img src="./assets/icone-instagram.png" alt="icone-instagram"></a>
-            </div>
+            </div>     
         </nav>
+        <div class="rodape__mensagem">
+        <p class="rodape__mensagem__texto">Desenvolvido por Alex Gomes.</p> 
+        <p class="rodape__mensagem__texto">Projeto fictício sem fins lucrativos.</p> 
+        </div>
     </footer>
 </body>
 </html>
