--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <h1 class="line-up__bandas1__1">System of a DOM</h1>
                     </div>
                     <div class="line-up__bandas2">
-                        <h5 class="line-up__bandas2__1">Pytohn Maiden</h5>
+                        <h5 class="line-up__bandas2__1">Python Maiden</h5>
                         <h5 class="line-up__bandas2__1">Apollo Client 2001</h5>
                         <h5 class="line-up__bandas2__1">Bom Java</h5>
                         <h5 class="line-up__bandas2__1">NickCallback</h5>
@@ -109,19 +109,17 @@
     </main>
     <footer class="rodape">
         <nav class="rodape__menu">
-            <section class="rodape__conteudo">    
-                <a href="index.html" class="rodape__link"><img class="rodape__logo" src="./assets/Logo1 1.png" alt="Logo do CodeChella"></a>
-                <div class="rodape__mensagem">
-                    <h2 class="rodape__mensagem__texto">Desenvolvido por Alex Gomes.</h2>
-                    <h2 class="rodape__mensagem__texto">Projeto fictício sem fins lucrativos.</h2>
-                </div>
-            </section>       
+            <a href="index.html" class="rodape__link"><img class="rodape__logo" src="./assets/Logo1 1.png" alt="Logo do CodeChella"></a>
             <div class="rodape__lista">
-                <h2 class="rodape__redes">Acesse nossas redes: </h2>
+                <p class="rodape__redes">Acesse nossas redes: </p>
                 <a href="https://www.twitch.tv/alexxgoomes" class="rodape__link"><img src="./assets/icone-twitch.png" alt="icone-twitch"></a>
                 <a href="https://www.instagram.com/alexxgoomes/" class="rodape__link"><img src="./assets/icone-instagram.png" alt="icone-instagram"></a>
-            </div>
+            </div>     
         </nav>
+        <div class="rodape__mensagem">
+        <p class="rodape__mensagem__texto">Desenvolvido por Alex Gomes.</p> 
+        <p class="rodape__mensagem__texto">Projeto fictício sem fins lucrativos.</p> 
+        </div>
     </footer>
 </body>
 </html>
