--- a/mapa.html
+++ b/mapa.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <nav class="cabecalho__menu"> 
+        <section class="cabecalho__menu"> 
             <a href="index.html" class="cabecalho__menu__link"><img class="cabecalho__logo" src="./assets/Logo1 1.png" alt="Logo do CodeChella"></a>   
             <ul class="menu__lista">
                 <a href="experiencia.html" class="cabecalho__menu__link">A experiência</a>
@@ -18,7 +18,7 @@
                 <a href="informacoes.html" class="cabecalho__menu__link">Informações</a>
                 <a href="ingresso.html" class="cabecalho__menu__link">Ingresso</a>
             </ul>
-        </nav>
+        </section>
     </header>
     <main class="apresentacao">
         <div class="apresentacao__secao">
@@ -39,17 +39,17 @@
             <h1 class="titulo__detalhes">Mais detalhes sobre os setores:</h1>
             <section class="detalhes">
                 <div class="detalhes__secao">
-                    <img src="./assets/bambole.png" alt="mulher com bambole">
+                    <img class="bambole" src="./assets/bambole.png" alt="mulher com bambole">
                     <h1 class="detalhes__secao__titulo">Pista</h1>
                     <p class="detalhes__secao__subtitulo">Pista convencional, atendida pelos bares e banheiros das laterais do estádio. Espaço amplo, com local para sentar e descansar. Separada da pista premium por uma grade.</p>
                 </div>
                 <div class="detalhes__secao">
-                    <img src="./assets/fumaca.png" alt="festa com fumaca colorida">
+                    <img class="fumaca" src="./assets/fumaca.png" alt="festa com fumaca colorida">
                     <h1 class="detalhes__secao__titulo">Pista Premium</h1>
                     <p class="detalhes__secao__subtitulo">Pista mais próxima do palco, com acesso muito próximo a banheiros e bares num raio de 100m. Todas as pessoas idosas e/ou com deficiência têm direito a acesso gratuito a essa área.</p>
                 </div>
                 <div class="detalhes__secao">
-                    <img src="./assets/cadeiras.png" alt="cadeiras de um estádio">
+                    <img class="cadeiras" src="./assets/cadeiras.png" alt="cadeiras de um estádio">
                     <h1 class="detalhes__secao__titulo">Cadeiras</h1>
                     <p class="detalhes__secao__subtitulo">Opção de cadeiras térreas ou elevadas. Acesso próximo a banheiros e bares, visão um pouco elevada em relação às pistas.</p>
                 </div>
@@ -58,19 +58,17 @@
     </main>
     <footer class="rodape">
         <nav class="rodape__menu">
-            <ul class="rodape__conteudo">    
-                <a href="index.html" class="rodape__link"><img class="rodape__logo" src="./assets/Logo1 1.png" alt="Logo do CodeChella"></a>
-                <div class="rodape__mensagem">
-                    <h2 class="rodape__mensagem__texto">Desenvolvido por Alex Gomes.</h2>
-                    <h2 class="rodape__mensagem__texto">Projeto fictício sem fins lucrativos.</h2>
-                </div>
-            </ul>       
+            <a href="index.html" class="rodape__link"><img class="rodape__logo" src="./assets/Logo1 1.png" alt="Logo do CodeChella"></a>
             <div class="rodape__lista">
-                <h2 class="rodape__redes">Acesse nossas redes: </h2>
+                <p class="rodape__redes">Acesse nossas redes: </p>
                 <a href="https://www.twitch.tv/alexxgoomes" class="rodape__link"><img src="./assets/icone-twitch.png" alt="icone-twitch"></a>
                 <a href="https://www.instagram.com/alexxgoomes/" class="rodape__link"><img src="./assets/icone-instagram.png" alt="icone-instagram"></a>
-            </div>
+            </div>     
         </nav>
+        <div class="rodape__mensagem">
+        <p class="rodape__mensagem__texto">Desenvolvido por Alex Gomes.</p> 
+        <p class="rodape__mensagem__texto">Projeto fictício sem fins lucrativos.</p> 
+        </div>
     </footer>
 </body>
 </html>
