--- a/experiencia.html
+++ b/experiencia.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>A Experiência</title>
     <link rel="stylesheet" href="./styles/cabecalho-rodape.css">
+    <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/experiencia.css">
 </head>
 <body>
@@ -16,7 +17,7 @@
                 <a href="experiencia.html" class="cabecalho__menu__link">A experiência</a>
                 <a href="mapa.html" class="cabecalho__menu__link">Mapa dos Setores</a>
                 <a href="informacoes.html" class="cabecalho__menu__link">Informações</a>
-                <a href="ingresso.html" class="cabecalho__menu__link">Ingresso</a>
+                <a href="ingresso.html" class="cabecalho__menu__link">Ingressos</a>
             </ul>
         </section>
     </header>
