--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
                 <a href="experiencia.html" class="cabecalho__menu__link">A experiência</a>
                 <a href="mapa.html" class="cabecalho__menu__link">Mapa dos Setores</a>
                 <a href="informacoes.html" class="cabecalho__menu__link">Informações</a>
-                <a href="ingresso.html" class="cabecalho__menu__link">Ingresso</a>
+                <a href="ingresso.html" class="cabecalho__menu__link">Ingressos</a>
             </ul>
         </section>
     </header>
     <main class="apresentacao">
         <div class="apresentacao__secao">
-            <h1 class="apresentacao__secao__titulo">Boas-vindas ao </h1>
-            <h1 class="apresentacao__secao__titulo">#CodeChella2023!</h1>
+            <h1 class="apresentacao__secao__titulo">Boas-vindas ao<br> #CodeChella2023!</h1>
         </div>
         <section class="alinhamento__apresentacao__datas">
             <img class="alinhamento__apresentacao__datas__imagem" src="./assets/Rectangle 7.png" alt="Pessoas dançando">
