--- a/ticket.html
+++ b/ticket.html
@@ -25,24 +25,22 @@
         <div class="apresentacao__secao">
             <h1 class="apresentacao__secao__titulo">Seu ingresso está aqui!</h1>
         </div>
-        <h1 class="ticket__titulo">Uhul, agora sim! Seu ingresso está aqui, apresente na entrada do evento e divirta-se!</h1>
+        <h1 class="titulo">Uhul, agora sim! Seu ingresso está aqui, apresente <br>na entrada do evento e divirta-se!</h1>
         <section class="ticket">
-            <div class="ticket__box">
-                <div class="ticket__box__simbolos">
-                    <img src="./assets/Logo1 1.png" alt="logo codechella">
-                    <img src="./assets/simbolo.png" alt="simbolo codechella">
+                <div class="ticket__simbolos">
+                    <img class="simbolo" src="./assets/Logo1 3.png" alt="logo codechella">
+                    <img class="simbolo" src="./assets/Ellipse 4.png" alt="simbolo codechella">
                 </div>
-                <div class="ticket__box__conteudo">
-                    <img src="./assets/qrcode.png" alt="qrcode">
-                    <div class="ticket__box__conteudo__informacoes">
-                        <h1 class="ticket__box__conteudo__informacoes__titulo">Alex Gomes</h1>
-                        <p class="ticket__box__conteudo__informacoes__subtitulo">Ingresso COrtesia</p>
-                        <p class="ticket__box__conteudo__informacoes__subtitulo">Setor Pista</p>
-                        <p class="ticket__box__conteudo__informacoes__subtitulo">Data: 11/03/2023</p>
-                        <p class="ticket__box__conteudo__informacoes__subtitulo">Local: São Paulo-SP</p>
+                <div class="ticket__conteudo">
+                    <img class="qrcode" src="./assets/qrcode.png" alt="qrcode">
+                    <div class="ticket__conteudo__informacoes">
+                        <h1 class="ticket__conteudo__informacoes__titulo">Alex Gomes</h1>
+                        <p class="ticket__conteudo__informacoes__subtitulo">Ingresso Cortesia</p>
+                        <p class="ticket__conteudo__informacoes__subtitulo">Setor Pista</p>
+                        <p class="ticket__conteudo__informacoes__subtitulo">Data: 11/03/2023</p>
+                        <p class="ticket__conteudo__informacoes__subtitulo">Local: São Paulo-SP</p>
                     </div>
                 </div>
-            </div>
         </section>
     </main>  
     <footer class="rodape">
