--- a/ingresso.html
+++ b/ingresso.html
@@ -29,7 +29,7 @@
         </div>
         <section class="formulario">
             <h1 class="formulario__titulo">Preencha o formulário a seguir:</h1>
-                <form class="formulario__area">
+                <form class="formulario__area" id="formulario">
                     <label class="formulario__area__titulo" for="nome">Nome Completo:</label>
                     <input class="formulario__area__campo" type="text" id="nome" name="nome">
                     <label class="formulario__area__titulo" for="email">Email:</label>
@@ -62,5 +62,6 @@
         <p class="rodape__mensagem__texto">Projeto fictício sem fins lucrativos.</p> 
         </div>
     </footer>
+    <script src="js/main.js"></script>
 </body>
 </html>
