--- a/ticket.html
+++ b/ticket.html
@@ -26,7 +26,7 @@
             <h1 class="apresentacao__secao__titulo">Seu ingresso está aqui!</h1>
         </div>
         <h1 class="titulo">Uhul, agora sim! Seu ingresso está aqui, apresente <br>na entrada do evento e divirta-se!</h1>
-        <section class="ticket">
+        <section class="ticket" id="ticket">
                 <div class="ticket__simbolos">
                     <img class="simbolo" src="./assets/Logo1 3.png" alt="logo codechella">
                     <img class="simbolo" src="./assets/Ellipse 4.png" alt="simbolo codechella">
