--- a/ingresso.html
+++ b/ingresso.html
@@ -44,9 +44,25 @@
                             <input class="formulario__area__campo1" type="date" id="nascimento" name="nascimento" max="2007-03-11">
                         </div>
                     </div>
-                        <a class="avancar" href="ticket.html">Avançar!<span class="material-icons">east</span></a>
+                        <a class="avancar" id="botao" >Avançar!<span class="material-icons">east</span></a>
                 </form>
         </section>
+        <section class="ticket" id="ticket">
+            <!-- <div class="ticket__simbolos">
+                <img class="simbolo" src="./assets/Logo1 3.png" alt="logo codechella">
+                <img class="simbolo" src="./assets/Ellipse 4.png" alt="simbolo codechella">
+            </div>
+            <div class="ticket__conteudo">
+                <img class="qrcode" src="./assets/qrcode.png" alt="qrcode">
+                <div class="ticket__conteudo__informacoes">
+                    <h1 class="ticket__conteudo__informacoes__titulo" id="nome-ingresso">Alex Gomes</h1>
+                    <p class="ticket__conteudo__informacoes__subtitulo">Ingresso Cortesia</p>
+                    <p class="ticket__conteudo__informacoes__subtitulo" id="tipo-ingresso">Setor Pista</p>
+                    <p class="ticket__conteudo__informacoes__subtitulo">Data: 11/03/2023</p>
+                    <p class="ticket__conteudo__informacoes__subtitulo">Local: São Paulo-SP</p>
+                </div>
+            </div> -->
+    </section>
     </main>
     <footer class="rodape">
         <nav class="rodape__menu">
