--- a/ticket.html
+++ b/ticket.html
@@ -27,20 +27,20 @@
         </div>
         <h1 class="titulo">Uhul, agora sim! Seu ingresso está aqui, apresente <br>na entrada do evento e divirta-se!</h1>
         <section class="ticket" id="ticket">
-                <div class="ticket__simbolos">
+                <!-- <div class="ticket__simbolos">
                     <img class="simbolo" src="./assets/Logo1 3.png" alt="logo codechella">
                     <img class="simbolo" src="./assets/Ellipse 4.png" alt="simbolo codechella">
                 </div>
                 <div class="ticket__conteudo">
                     <img class="qrcode" src="./assets/qrcode.png" alt="qrcode">
                     <div class="ticket__conteudo__informacoes">
-                        <h1 class="ticket__conteudo__informacoes__titulo">Alex Gomes</h1>
+                        <h1 class="ticket__conteudo__informacoes__titulo" id="nome-ingresso">Alex Gomes</h1>
                         <p class="ticket__conteudo__informacoes__subtitulo">Ingresso Cortesia</p>
-                        <p class="ticket__conteudo__informacoes__subtitulo">Setor Pista</p>
+                        <p class="ticket__conteudo__informacoes__subtitulo" id="tipo-ingresso">Setor Pista</p>
                         <p class="ticket__conteudo__informacoes__subtitulo">Data: 11/03/2023</p>
                         <p class="ticket__conteudo__informacoes__subtitulo">Local: São Paulo-SP</p>
                     </div>
-                </div>
+                </div> -->
         </section>
     </main>  
     <footer class="rodape">
@@ -57,5 +57,6 @@
         <p class="rodape__mensagem__texto">Projeto fictício sem fins lucrativos.</p> 
         </div>
     </footer>  
+    <script src="js/main.js"></script>
 </body>
 </html>
