--- a/ticket.html
+++ b/ticket.html
@@ -27,7 +27,7 @@
         </div>
         <h1 class="titulo">Uhul, agora sim! Seu ingresso está aqui, apresente <br>na entrada do evento e divirta-se!</h1>
         <section class="ticket" id="ticket">
-                <!-- <div class="ticket__simbolos">
+                <div class="ticket__simbolos">
                     <img class="simbolo" src="./assets/Logo1 3.png" alt="logo codechella">
                     <img class="simbolo" src="./assets/Ellipse 4.png" alt="simbolo codechella">
                 </div>
@@ -40,7 +40,7 @@
                         <p class="ticket__conteudo__informacoes__subtitulo">Data: 11/03/2023</p>
                         <p class="ticket__conteudo__informacoes__subtitulo">Local: São Paulo-SP</p>
                     </div>
-                </div> -->
+                </div>
         </section>
     </main>  
     <footer class="rodape">
@@ -56,7 +56,7 @@
         <p class="rodape__mensagem__texto">Desenvolvido por Alex Gomes.</p> 
         <p class="rodape__mensagem__texto">Projeto fictício sem fins lucrativos.</p> 
         </div>
-    </footer>  
-    <script src="js/main.js"></script>
+    </footer> 
+    <script src="ingresso.js"></script>
 </body>
 </html>
