--- a/ingresso.html
+++ b/ingresso.html
@@ -31,9 +31,11 @@
             <h1 class="formulario__titulo">Preencha o formulário a seguir:</h1>
                 <form class="formulario__area" id="formulario">
                     <label class="formulario__area__titulo" for="nome">Nome Completo:</label>
-                    <input class="formulario__area__campo" type="text" id="nome" name="nome" required>
+                    <input class="formulario__area__campo" type="text" id="nome" name="nome" minlenght="3" required>
                     <label class="formulario__area__titulo" for="email">Email:</label>
-                    <input class="formulario__area__campo" type="text" id="email" name="email" required>
+                    <input class="formulario__area__campo" type="email" id="email" name="email" minlenght="4" required>
+                    <label class="formulario__area__titulo" for="cpf">CPF:</label>
+                    <input class="formulario__area__campo" type="text" id="cpf" name="cpf" minlenght="11" maxlenght="14" pattern="\d{3}\.?\d{3}\.?\d{3}-?\d{2}"  required>
                     <div class="formulario__flex">
                         <div class="formulario__flex__column">
                             <label class="formulario__area__titulo" for="tipo">Tipo de Ingresso:</label>
@@ -47,10 +49,12 @@
                         </div>
                         <div class="formulario__flex__column">
                             <label class="formulario__area__titulo" for="nascimento">Data de Nascimento:</label>
-                            <input class="formulario__area__campo1" type="date" id="nascimento" name="nascimento" max="2007-03-11">
+                            <input class="formulario__area__campo1" type="date" id="nascimento" name="nascimento" required>
                         </div>
                     </div>
-                        <a class="avancar" id="botao" href="ticket.html">Avançar!<span class="material-icons">east</span></a>
+                    <a href="ticket.html" class="avancar-ancora">
+                        <input type="submit" class="avancar" id="botao" value="Avançar!">
+                    </a>
                 </form>
         </section>
     </main>
@@ -68,5 +72,6 @@
         <p class="rodape__mensagem__texto">Projeto fictício sem fins lucrativos.</p> 
         </div>
     </footer>
+    <script src="./js/script.js" type="module"></script>
 </body>
 </html>
