--- a/ingresso.html
+++ b/ingresso.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ingressos</title>
+    <link rel = "icon" href = "https://s3-alpha-sig.figma.com/img/1e0e/947d/eb11bf699e37d2244544679e7723e217?Expires=1683504000&Signature=k9FSdR7fEv5g7UwST5Y1bh~IvE8wvxdHlmBebducF6RAmZVxbk-~x3hpcS2brkLM4E-unp93OjAjgApRQSc8UZqgGxNKhIepymiHGIjE5sq5x4N2vVIMmHHPRv~ZjnDyNunLs0rY-U7Fv~AEywkcqnP~23Pe~54P5OjJsDaLnKCr3WIuZdRdE8g~HUbGa1zwGqN5uW~V7J9vMqL1gv~08Ltjj1F3UwWAjnhZA98Bct4MMvyz60Lve2MXduDrxxn74zO46Rvc3iDZKe-VF2Px8IBrl-PB9sLEiGFjk2vyAg~PAw2hT5y364kZBIKxiyq1hpsSyxl0j9NYAN5nKtftQw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" type = "image/x-icon">
     <link rel="stylesheet" href="./styles/cabecalho-rodape.css">
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/ingressos.css">
